Styling issue
The reset button was too close to the name.

--- a/scss/stylesheets/block.scss
+++ b/scss/stylesheets/block.scss
@@ -307,4 +307,5 @@ body {
   border: 1px solid #4E4E4E;
   font-size: 1rem;
   align-self: center;
+  margin-left: 1rem;
 }
